--- a/index.html
+++ b/index.html
@@ -1,16 +1,121 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>Walter White | Ana Sayfa</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TechTop10 | Geleceği Keşfet</title>
+    <style>
+        :root {
+            --bg-dark: #0a0f1d;
+            --card-bg: #161e31;
+            --neon-blue: #00d2ff;
+            --neon-purple: #9d50bb;
+            --text-white: #f8fafc;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, var(--bg-dark) 0%, #1a1a2e 100%);
+            color: var(--text-white);
+            margin: 0;
+            min-height: 100vh;
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 8%;
+            background: rgba(22, 30, 49, 0.8);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .logo {
+            font-size: 28px;
+            font-weight: 800;
+            background: linear-gradient(to right, var(--neon-blue), var(--neon-purple));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .login-btn {
+            background: linear-gradient(45deg, var(--neon-blue), var(--neon-purple));
+            color: white;
+            padding: 12px 25px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: 0.3s;
+        }
+
+        .hero { text-align: center; padding: 60px 20px; }
+        .hero h1 { font-size: 2.5rem; margin-bottom: 10px; }
+        .hero p { color: #94a3b8; }
+
+        .container { max-width: 1200px; margin: 0 auto; padding: 0 20px 50px 20px; }
+        .card-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 25px;
+        }
+
+        .card {
+            background: var(--card-bg);
+            border-radius: 20px;
+            overflow: hidden;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            transition: 0.3s;
+        }
+
+        .card:hover {
+            border-color: var(--neon-blue);
+            transform: translateY(-8px);
+        }
+
+        .card-image {
+            height: 150px;
+            background: rgba(0,0,0,0.2);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 45px;
+        }
+
+        .card-content { padding: 20px; }
+        .card-content h3 { margin: 0 0 10px 0; color: var(--neon-blue); }
+        .card-content p { color: #cbd5e1; font-size: 0.9rem; line-height: 1.5; }
+    </style>
 </head>
 <body>
-  <h1>Walter White</h1>
-  <nav>
-    <a href="index.html">Ana Sayfa</a> |
-    <a href="hakkinda.html">Hakkında</a> |
-    <a href="iletisim.html">İletişim</a>
-  </nav>
-  <p>Walter White'ın kişisel web sitesine hoş geldiniz.</p>
+
+    <nav>
+        <div class="logo">TECHTOP10</div>
+        <a href="#" class="login-btn">Giriş Yap</a>
+    </nav>
+
+    <div class="hero">
+        <h1>Geleceğin En İyi 10 Teknolojisi</h1>
+        <p>2025 ve ötesine yön verecek olan yenilikleri keşfedin.</p>
+    </div>
+
+    <div class="container">
+        <div class="card-grid">
+            <div class="card"><div class="card-image">🤖</div><div class="card-content"><h3>1. Yapay Zeka</h3><p>ChatGPT ve Claude gibi araçlar dünyayı değiştiriyor.</p></div></div>
+            <div class="card"><div class="card-image">🦾</div><div class="card-content"><h3>2. İnsansı Robotlar</h3><p>Tesla Optimus gibi robotlar artık aramızda.</p></div></div>
+            <div class="card"><div class="card-image">🚀</div><div class="card-content"><h3>3. Uzay Turizmi</h3><p>SpaceX ile siviller artık uzaya çıkabiliyor.</p></div></div>
+            <div class="card"><div class="card-image">⚛️</div><div class="card-content"><h3>4. Kuantum Bilgisayarlar</h3><p>Verileri saniyeler içinde işleyen devrimsel hız.</p></div></div>
+            <div class="card"><div class="card-image">⚡</div><div class="card-content"><h3>5. Otonom Araçlar</h3><p>Kendi kendine giden araçlar trafiği güvenli kılıyor.</p></div></div>
+            <div class="card"><div class="card-image">🧬</div><div class="card-content"><h3>6. Gen Düzenleme</h3><p>Hastalıkları DNA seviyesinde tedavi etme imkanı.</p></div></div>
+            <div class="card"><div class="card-image">🥽</div><div class="card-content"><h3>7. Karma Gerçeklik</h3><p>Dijital ve fiziksel dünyayı birleştiren gözlükler.</p></div></div>
+            <div class="card"><div class="card-image">⛓️</div><div class="card-content"><h3>8. Blockchain</h3><p>Veri ve güvenliğin yeni internet protokolü.</p></div></div>
+            <div class="card"><div class="card-image">☀️</div><div class="card-content"><h3>9. Füzyon Enerjisi</h3><p>Sınırsız ve tertemiz enerji üretme hayali.</p></div></div>
+            <div class="card"><div class="card-image">🌐</div><div class="card-content"><h3>10. 6G Teknolojisi</h3><p>Işık hızında veri transferi dönemi başlıyor.</p></div></div>
+        </div>
+    </div>
+
 </body>
 </html>
